@@ -29,11 +29,13 @@ module TTCluster
   MSG_SERVER_ALREADY_RUNNING = "Server is already running (pid=%s)".freeze
   MSG_SERVER_NOT_RUNNING     = "Server is not running".freeze
   MSG_STARTED_SERVER         = "Started server (pid=%s)".freeze
+  MSG_RESTARTED_SERVER       = "Restarted server (pid=%s)".freeze
   MSG_STOPPED_SERVER         = "Stopped server (pid=%s)".freeze
   MSG_HUP_SERVER             = "Hung up server (pid=%s)".freeze
   MSG_FAILED_TO_START_SERVER = "Failed to start server, check port, permissions and configuration".freeze
   MSG_FAILED_TO_STOP_SERVER  = "Failed to stop server (pid=%s), check permissions".freeze
   MSG_FAILED_TO_STOP_MISMATCH_SERVER = "Failed to stop pid mismatch server (pid=%s), check permissions".freeze
+  MSG_FAILED_TO_RESTART_SERVER  = "Stopped server but failed to start again".freeze
   MSG_FAILED_TO_HUP_SERVER   = "Failed to hung up server (pid=%s), check permissions".freeze
   MSG_MISMATCH_PID           = "Pid file is missing or pid mismatch, server is running (pid=%s)".freeze
   MSG_STALE_PID              = "Pid file is stale and invalid (pid=%s), server is not running".freeze
