@@ -1,5 +1,5 @@
 #--
-# lib/ttcluster/start_command.rb
+# lib/ttcluster/restart_command.rb
 #++
 
 
@@ -9,37 +9,36 @@ require 'ttcluster/base_command'
 module TTCluster
 
   ##
-  # 'start' command implementation.
-  class StartCommand < BaseCommand
+  # 'restart' command implementation.
+  class RestartCommand < BaseCommand
 
     ##
-    # Save runner and port for 'start' run.
+    # Save runner and port for 'restart' run.
     def initialize(runner, port)
       super(runner)
       @port = port
     end
 
     ##
-    # Start ttcluster server.
+    # Restart ttcluster server.
     def run
       chdir_to_ttbase
 
       statuses = get_statuses(@port)
 
-      puts "TTCluster Start:"
+      puts "TTCluster Restart:"
       statuses.each do |port, status|
         msg =
         case status
-        when /^running pid\((\d+)\)/
-          MSG_SERVER_ALREADY_RUNNING % $1
-        when /^mismatch pid\((\d+)\)/
-          pid = $1
-          remove_pid_file(port)
+        when /^(running|mismatch) pid\((\d+)\)/
+          stat, pid = $1, $2
+          remove_pid_file(port) if stat == "mismatch"
           if stop_server(pid.to_i)
+            sleep 0.2
             pid = start_server(port)
-            pid>0 ? (MSG_STARTED_SERVER % pid) : MSG_FAILED_TO_START_SERVER
+            pid>0 ? (MSG_RESTARTED_SERVER % pid) : MSG_FAILED_TO_RESTART_SERVER
           else
-            MSG_FAILED_TO_STOP_MISMATCH_SERVER % pid
+            MSG_FAILED_TO_STOP_SERVER % pid
           end
         when /^not running/
           pid = start_server(port)
