@@ -1,4 +1,5 @@
 2008-09-09 (0.1.2)
+  * Add 'restart' command
   * Show ttbase dir on 'config' command
 
  2008-09-08 (0.1.1)
